assignments/07-csv/6CWUT
  File "./blastomatic.py", line 74
    """Outputs records to dictionary {d_anno}"""
                                               ^
SyntaxError: invalid syntax
